3-awards-section-shift: award image alignment works for all but xs screens. Still fixing

--- a/assets/custom/css/custom.css
+++ b/assets/custom/css/custom.css
@@ -38,12 +38,17 @@ body {
 
 .award-container {
   position: relative;
-  max-width: 100%
+  height: auto;
+}
+
+.award-row {
+  max-width: calc(100% - 10px);
+  position: relative;
 }
 
 .award-overlapped {
   position: absolute;
-  left: 175px;
+  left: 33%;
 }
 
 /*master background color*/
